Add the groundwork from project 5 with some modified text

--- a/templates/cart.ejs
+++ b/templates/cart.ejs
@@ -4,11 +4,11 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Review Application</title>
+	<title>Cart</title>
 </head>
 
 <body>
-	<h1>Review Application</h1>
+	<h1>Cart</h1>
 	<form action=<%- postUrl %> method="post">
 		<fieldset>
            	<label><b>Email Address: </b></label>
