--- a/templates/catalog.ejs
+++ b/templates/catalog.ejs
@@ -4,11 +4,11 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Application</title>
+	<title>Catalog</title>
 </head>
 
 <body>
-	<h1>Application</h1>
+	<h1>Catalog</h1>
 	<form action=<%- postUrl %> method="post">
 		<fieldset>
             <label><b>Name: </b></label>
