Update a lot of file names and html text

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,23 +4,22 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Dog Catalog</title>
+	<title>Dog Center</title>
 </head>
 
 <body>
-	<h1>Welcome to Dog Catalog</h1>
+	<h1>Welcome to Dog Center!</h1>
 
     <h2>Customer</h2>
     <ul>
-        <li>To look through the catalog select <a href="/catalog">Catalog</a></li>
-        <li>To look at cart select <a href="/cart">Cart</a></li>
+        <li>To look through the catalog select <a href="/adoption">Catalog</a></li>
+        <li>To look at cart select <a href="/backyard">Cart</a></li>
     </ul>
     <hr>
     
     <h2>Admin</h2>
     <ul>
-        <li>To find dogs purchased based on breed <a href="/adminBreed">Select by Breed</a></li>
-        <li>To return all dogs <a href="/adminRemove">Return Dogs</a></li>
+        <li>To return all dogs <a href="/returnDog">Return Dogs</a></li>
     </ul>
     <hr>
 </body>
