--- a/templates/returnDog.ejs
+++ b/templates/returnDog.ejs
@@ -4,11 +4,11 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Remove Applicants</title>
+	<title>Return Dogs</title>
 </head>
 
 <body>
-	<h1>Removing All Applicants</h1>
+	<h1>Return All Dogs</h1>
 	<form action=<%- postUrl %> method="post">
 		<input type="submit" value="Remove all applicants">
 	</form>
