--- a/templates/backyard.ejs
+++ b/templates/backyard.ejs
@@ -4,19 +4,20 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Select by GPA</title>
+	<title>Backyard</title>
 </head>
 
 <body>
-	<h1>Display GFAs Greater than or Equal to</h1>
+	<h1>Backyard</h1>
 	<form action=<%- postUrl %> method="post">
 		<fieldset>
-           	<label><b>GPA: </b></label>
-            <input type="text" name="gpa">
+           	<label><b>Email Address: </b></label>
+            <input type="email" name="email">
             <br><br>
 		</fieldset>
 
 		<br>
+		<input type="reset">
 		<input type="submit" value="Submit Request">
 	</form>
 	<hr>
