--- a/templates/adoption.ejs
+++ b/templates/adoption.ejs
@@ -4,11 +4,11 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Adoption Center</title>
+	<title>Random Adoption Center</title>
 </head>
 
 <body>
-	<h1>Adoption Center</h1>
+	<h1>Random Adoption Center</h1>
 	<form action=<%- postUrl %> method="post">
 		<fieldset>
             <label><b>Name: </b></label>
