--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -4,21 +4,16 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Dog Center</title>
+	<title>Random Dog Adoption Center</title>
 </head>
 
 <body>
-	<h1>Welcome to Dog Center!</h1>
+	<h1>Random Dog Adoption Dog Center</h1>
 
     <h2>Customer</h2>
     <ul>
         <li>To look through the catalog select <a href="/adoption">Catalog</a></li>
         <li>To look at cart select <a href="/backyard">Cart</a></li>
-    </ul>
-    <hr>
-    
-    <h2>Admin</h2>
-    <ul>
         <li>To return all dogs <a href="/returnDog">Return Dogs</a></li>
     </ul>
     <hr>
