--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -12,8 +12,9 @@
 
     <h2>Customer</h2>
     <ul>
-        <li>To look through the catalog select <a href="/adoption">Catalog</a></li>
-        <li>To look at cart select <a href="/backyard">Cart</a></li>
+        <li>To register a user select <a href="/register">Register</a></li>
+        <li>To look through the catalog select <a href="/adoption">Adoption</a></li>
+        <li>To look at your selection of dogs select <a href="/backyard">Backyard</a></li>
         <li>To return all dogs <a href="/returnDog">Return Dogs</a></li>
     </ul>
     <hr>
