--- a/templates/adoption.ejs
+++ b/templates/adoption.ejs
@@ -4,43 +4,24 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Random Adoption Center</title>
+	<title>Backyard</title>
 </head>
 
 <body>
-	<h1>Random Adoption Center</h1>
+	<h1>Backyard</h1>
 	<form action=<%- postUrl %> method="post">
 		<fieldset>
-            <label><b>Name: </b></label>
-            <input type="text" name="name"/>
-
-			<label><b>Email Address: </b></label>
+           	<label><b>Email Address: </b></label>
             <input type="email" name="email">
             <br><br>
-            
-            <label><b>GPA: </b></label>
-            <input type="text" name="gpa">
-            <br><br>
-
-            <label><b>Background Information: </b></label><br>
-            <textarea rows="5" cols="80" name="bgInfo"></textarea>
-            
 		</fieldset>
 
 		<br>
 		<input type="reset">
-		<input type="submit" value="Submit Application">
+		<input type="submit" value="Submit Request">
 	</form>
 	<hr>
 	<a href=<%- homeUrl %>>HOME</a>
-
-	<script>
-		window.onsubmit = () => {
-			let msg = "Are you sure you want to submit your application?\n";
-			msg += "You will not be able to change your information once submitted.";
-			return window.confirm(msg);
-		};
-	</script>
 </body>
 
 </html>
