--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -18,18 +18,18 @@
             <input type="email" name="email">
             <br><br>
             
-            <label><b>GPA: </b></label>
-            <input type="text" name="gpa">
+            <label><b>Age: </b></label>
+            <input type="text" name="age">
             <br><br>
 
-            <label><b>Background Information: </b></label><br>
-            <textarea rows="5" cols="80" name="bgInfo"></textarea>
+            <label><b>Additional Information: </b></label><br>
+            <textarea rows="5" cols="80" name="addInfo"></textarea>
             
 		</fieldset>
 
 		<br>
 		<input type="reset">
-		<input type="submit" value="Submit Application">
+		<input type="submit" value="Submit">
 	</form>
 	<hr>
 	<a href=<%- homeUrl %>>HOME</a>
