--- a/templates/backyard.ejs
+++ b/templates/backyard.ejs
@@ -11,8 +11,8 @@
 	<h1>Backyard</h1>
 	<form action=<%- postUrl %> method="post">
 		<fieldset>
-           	<label><b>Email Address: </b></label>
-            <input type="email" name="email">
+           	<label><b>Name: </b></label>
+            <input type="text" name="name">
             <br><br>
 		</fieldset>
 
