--- a/templates/adoption.ejs
+++ b/templates/adoption.ejs
@@ -4,21 +4,21 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Backyard</title>
+	<title>Random Adoption</title>
 </head>
 
 <body>
-	<h1>Backyard</h1>
+	<h1>Random Adoption</h1>
 	<form action=<%- postUrl %> method="post">
 		<fieldset>
-           	<label><b>Email Address: </b></label>
-            <input type="email" name="email">
+           	<label><b>Name: </b></label>
+            <input type="text" name="name">
             <br><br>
 		</fieldset>
 
 		<br>
 		<input type="reset">
-		<input type="submit" value="Submit Request">
+		<input type="submit" value="Submit Adoption Request">
 	</form>
 	<hr>
 	<a href=<%- homeUrl %>>HOME</a>
