changed return dogs

--- a/templates/returnDog.ejs
+++ b/templates/returnDog.ejs
@@ -10,7 +10,7 @@
 <body>
 	<h1>Return All Dogs</h1>
 	<form action=<%- postUrl %> method="post">
-		<input type="submit" value="Remove all applicants">
+		<input type="submit" value="Remove All Dogs">
 	</form>
 	<hr>
 	<a href=<%- homeUrl %>>HOME</a>
