--- a/templates/adoption.ejs
+++ b/templates/adoption.ejs
@@ -21,7 +21,8 @@
 		<input type="submit" value="Submit Adoption Request">
 	</form>
 	<hr>
-	<a href=<%- homeUrl %>>HOME</a>
+	<a href="/">HOME</a>
+
 </body>
 
 </html>
