--- a/templates/backyard.ejs
+++ b/templates/backyard.ejs
@@ -21,7 +21,7 @@
 		<input type="submit" value="Submit Request">
 	</form>
 	<hr>
-	<a href="/">HOME</a>
+	<a href="https://dog-center.onrender.com">HOME</a>
 
 </body>
 
