--- a/templates/result.ejs
+++ b/templates/result.ejs
@@ -15,7 +15,7 @@
         <%- results %>
     </div>
     <hr>
-	<a href="/">HOME</a>
+	<a href="https://dog-center.onrender.com">HOME</a>
 
 </body>
 
