--- a/templates/returnDog.ejs
+++ b/templates/returnDog.ejs
@@ -13,7 +13,7 @@
 		<input type="submit" value="Remove All Dogs">
 	</form>
 	<hr>
-	<a href="https://dog-center.onrender.com">HOME</a>
+	<a href="/">HOME</a>
 
     <script>
 		window.onsubmit = () => {
