--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -32,7 +32,7 @@
 		<input type="submit" value="Submit">
 	</form>
 	<hr>
-	<a href="https://dog-center.onrender.com">HOME</a>
+	<a href="/">HOME</a>
 
 	<script>
 		window.onsubmit = () => {
