--- a/templates/backyard.ejs
+++ b/templates/backyard.ejs
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Backyard</title>
+	<link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
