--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -5,6 +5,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Random Dog Adoption Center</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 
 <body>
