--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -5,18 +5,29 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Random Dog Adoption Center</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
+     <style>
+        body {
+            background-color: aliceblue;
+        }
+        h1 {
+            color:cornflowerblue;
+        }
+        h2 {
+            color:lightseagreen
+        }
+     </style>
 </head>
 
 <body>
 	<h1>Random Dog Adoption Dog Center</h1>
 
-    <h2>Customer</h2>
+    <h2>User</h2>
     <ul>
         <li>To register a user select <a href="/register">Register</a></li>
         <li>To look through the catalog select <a href="/adoption">Adoption</a></li>
         <li>To look at your selection of dogs select <a href="/backyard">Backyard</a></li>
-        <li>To return all dogs <a href="/returnDog">Return Dogs</a></li>
+        <li>To return all dogs select <a href="/returnDog">Return Dogs</a></li>
     </ul>
     <hr>
 </body>
