--- a/templates/backyard.ejs
+++ b/templates/backyard.ejs
@@ -5,7 +5,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Backyard</title>
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
+	 <style>
+		body {
+			background-color: rgb(173, 251, 173);
+		}
+	 </style>
 </head>
 
 <body>
