added css to result

--- a/templates/result.ejs
+++ b/templates/result.ejs
@@ -5,7 +5,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Process Results</title>
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
+    <style>
+		body {
+			background-color:aliceblue;
+		}
+	 </style>
 </head>
 
 <body>
