--- a/templates/returnDog.ejs
+++ b/templates/returnDog.ejs
@@ -5,7 +5,12 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Return Dogs</title>
-	<link rel="stylesheet" href="style.css" type="text/css">
+	<!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
+	<style>
+		body {
+			background-color:lavender;
+		}
+	 </style>
 </head>
 
 <body>
