--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -1,11 +1,9 @@
-<!-- DO NOT MODIFY THIS FILE -->
 <!doctype html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8" />
 	<title>Random Adoption Center</title>
-	<!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
 	<style>
 		body {
 			background-color:lightgrey;
@@ -42,7 +40,7 @@
 
 	<script>
 		window.onsubmit = () => {
-			let msg = "Are you sure you want to submit your application?\n";
+			let msg = "Are you sure you want to submit your registration?\n";
 			msg += "You will not be able to change your information once submitted.";
 			return window.confirm(msg);
 		};
