--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,11 +1,9 @@
-<!-- DO NOT MODIFY THIS FILE -->
 <!doctype html>
 <html lang="en">
 
 <head>
 	<meta charset="utf-8" />
 	<title>Random Dog Adoption Center</title>
-    <!-- <link rel="stylesheet" href="style.css" type="text/css"> -->
      <style>
         body {
             background-color: aliceblue;
@@ -27,7 +25,7 @@
         <li>To register a user select <a href="/register">Register</a></li>
         <li>To look through the catalog select <a href="/adoption">Adoption</a></li>
         <li>To look at your selection of dogs select <a href="/backyard">Backyard</a></li>
-        <li>To return all dogs select <a href="/returnDog">Return Dogs</a></li>
+        <li>To return all dogs and remove registered users select <a href="/returnDog">Return Dogs</a></li>
     </ul>
     <hr>
 </body>
