changed headers for register

--- a/templates/register.ejs
+++ b/templates/register.ejs
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Random Adoption Center</title>
+	<title>Registration</title>
 	<style>
 		body {
 			background-color:lightgrey;
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<h1>Random Adoption Center</h1>
+	<h1>Register User</h1>
 	<form action="/registerSuccess" method="post">
 		<fieldset>
             <label><b>Name: </b></label>
