edited index since the wording was off

--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -23,7 +23,7 @@
     <h2>User</h2>
     <ul>
         <li>To register a user select <a href="/register">Register</a></li>
-        <li>To look through the catalog select <a href="/adoption">Adoption</a></li>
+        <li>To adopt a random dog select <a href="/adoption">Adoption</a></li>
         <li>To look at your selection of dogs select <a href="/backyard">Backyard</a></li>
         <li>To return all dogs and remove registered users select <a href="/returnDog">Return Dogs</a></li>
     </ul>
